[metadata]
name = pytrace
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Michae1CC/pytrace
author = Michael Ciccotosto-Camp
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options.entry_points]
console_scripts =
    pytrace = pytrace.__main__:main

[options.extras_require]
dev =
    black
    mypy
    pre-commit
    types-setuptools

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
